test/corpus/plural_select.txt
================================================================================
Basic plural
================================================================================

items: "{count, plural, =0 {no items} other {# items}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key)
                (case_body
                  (pound_placeholder))))))))))

================================================================================
Plural with offset
================================================================================

guests: "{count, plural, offset:1 =0 {no guests} =1 {one guest} other {# guests}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (offset
                (number))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key)
                (case_body
                  (pound_placeholder))))))))))

================================================================================
All plural keywords
================================================================================

comprehensive: "{count, plural, zero {zero items} one {one item} two {two items} few {few items} many {many items} other {# items}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key)
                (case_body))
              (plural_case
                (plural_key)
                (case_body))
              (plural_case
                (plural_key)
                (case_body))
              (plural_case
                (plural_key)
                (case_body))
              (plural_case
                (plural_key)
                (case_body))
              (plural_case
                (plural_key)
                (case_body
                  (pound_placeholder))))))))))

================================================================================
Selectordinal
================================================================================

position: "You finished {place, selectordinal, =1 {1st} =2 {2nd} =3 {3rd} other {#th}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (selectordinal)
            (plural_rules
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key)
                (case_body
                  (pound_placeholder))))))))))

================================================================================
Basic select
================================================================================

gender: "{person, select, male {He} female {She} other {They}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body))
              (select_case
                (select_key
                  (identifier))
                (case_body))
              (select_case
                (select_key
                  (identifier))
                (case_body)))))))))

================================================================================
Select with quoted strings in cases
================================================================================

style: "{type, select, good {"cool"} bad {"uncool"} other {"neutral"}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (quoted_string)))
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (quoted_string)))
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (quoted_string))))))))))

================================================================================
Plural with placeholders in case bodies
================================================================================

invite: "{count, plural, =0 {No guests invited} =1 {Invited {guest} to {event}} other {Invited # people to {event}}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body
                  (placeholder
                    (identifier))
                  (placeholder
                    (identifier))))
              (plural_case
                (plural_key)
                (case_body
                  (pound_placeholder)
                  (placeholder
                    (identifier)))))))))))

================================================================================
Select with placeholders in case bodies
================================================================================

greeting: "{gender, select, male {Hello Mr. {name}} female {Hello Ms. {name}} other {Hello {name}}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (placeholder
                    (identifier))))
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (placeholder
                    (identifier))))
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (placeholder
                    (identifier)))))))))))

================================================================================
Plural with large offset
================================================================================

attendees: "{going, plural, offset:10 =0 {Nobody is going} =1 {Only you are going} other {You and # others are going}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (offset
                (number))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key)
                (case_body
                  (pound_placeholder))))))))))

================================================================================
Select with many options
================================================================================

size: "{item, select, small {S} medium {M} large {L} xlarge {XL} xxlarge {XXL} other {Unknown}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body))
              (select_case
                (select_key
                  (identifier))
                (case_body))
              (select_case
                (select_key
                  (identifier))
                (case_body))
              (select_case
                (select_key
                  (identifier))
                (case_body))
              (select_case
                (select_key
                  (identifier))
                (case_body))
              (select_case
                (select_key
                  (identifier))
                (case_body)))))))))

================================================================================
Plural with exact numbers
================================================================================

countdown: "{remaining, plural, =0 {Time's up!} =1 {1 second left} =2 {2 seconds left} other {# seconds left}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key)
                (case_body
                  (pound_placeholder))))))))))

================================================================================
Minimal plural
================================================================================

minimal: "{n, plural, other {items}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key)
                (case_body)))))))))

================================================================================
Minimal select
================================================================================

choice: "{type, select, other {default}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body)))))))))
