test/corpus/template.txt
================================================================================
Basic template string
================================================================================

simple: `Hello world`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string)))

================================================================================
Template with placeholder
================================================================================

greeting: `Hello {name}!`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (placeholder
        (identifier)))))

================================================================================
Multiline template string
================================================================================

multiline: `This is line one
This is line two
This is line three`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string)))

================================================================================
Template with multiple placeholders
================================================================================

message: `Hello {name}, you have {count} messages`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (placeholder
        (identifier))
      (placeholder
        (identifier)))))

================================================================================
Template with complex message
================================================================================

complex: `You have {count, plural, =0 {no messages} other {# messages}}`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (complex_message
        (selector
          (identifier)
          (plural)
          (plural_rules
            (plural_case
              (plural_key
                (number))
              (case_body))
            (plural_case
              (plural_key)
              (case_body
                (pound_placeholder)))))))))

================================================================================
Template with nested complex messages
================================================================================

nested: `{user, select, admin {Welcome {name}! You have {count, plural, =0 {no tasks} other {# tasks}}} other {Hello {name}}}`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (complex_message
        (selector
          (identifier)
          (select)
          (select_rules
            (select_case
              (select_key
                (identifier))
              (case_body
                (placeholder
                  (identifier))
                (complex_message
                  (selector
                    (identifier)
                    (plural)
                    (plural_rules
                      (plural_case
                        (plural_key
                          (number))
                        (case_body))
                      (plural_case
                        (plural_key)
                        (case_body
                          (pound_placeholder))))))))
            (select_case
              (select_key
                (identifier))
              (case_body
                (placeholder
                  (identifier))))))))))

================================================================================
Template with escaping
================================================================================

escaped: `Use '{' and '}' for literal braces`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (escaped_char
        (quoted_literal))
      (escaped_char
        (quoted_literal)))))

================================================================================
Empty template string
================================================================================

empty: ``

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string)))

================================================================================
Template with apostrophes
================================================================================

possessive: `This is John's book and Mary's pen`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string)))

================================================================================
Template ending with single quote
================================================================================

ending: `Hello {name}'`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (placeholder
        (identifier)))))

================================================================================
Complex multiline template with indentation
================================================================================

formatted: `Welcome {name}!
  You have {msgCount, plural,
    =0 {no new messages}
    =1 {one new message}
    other {# new messages}
  }.
  Status: {status, select,
    online {You are online}
    offline {You are offline}
    other {Unknown status}
  }`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (placeholder
        (identifier))
      (complex_message
        (selector
          (identifier)
          (plural)
          (plural_rules
            (plural_case
              (plural_key
                (number))
              (case_body))
            (plural_case
              (plural_key
                (number))
              (case_body))
            (plural_case
              (plural_key)
              (case_body
                (pound_placeholder))))))
      (complex_message
        (selector
          (identifier)
          (select)
          (select_rules
            (select_case
              (select_key
                (identifier))
              (case_body))
            (select_case
              (select_key
                (identifier))
              (case_body))
            (select_case
              (select_key
                (identifier))
              (case_body))))))))

================================================================================
Template with mixed quotes
================================================================================

mixed: `He said "Hello" and she said 'Hi'`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string)))

================================================================================
Template with tags
================================================================================

tags: `Use <b>bold</b> and <i>italic</i> tags`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (tag
        (identifier))
      (tag
        (identifier))
      (tag
        (identifier))
      (tag
        (identifier)))))

================================================================================
Template with escaped tags
================================================================================

escaped_tags: `Literal '<b>' and '</i>' tags`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (escaped_char
        (quoted_literal))
      (escaped_char
        (quoted_literal)))))

================================================================================
Template with number formatting
================================================================================

numbers: `Price: {amount, number, ::currency/USD} on {date, date, ::MMM d}`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (complex_message
        (identifier)
        (skeleton_format
          (skeleton_pattern)))
      (complex_message
        (identifier)
        (skeleton_format
          (skeleton_pattern))))))

================================================================================
Only placeholder in template
================================================================================

placeholder_only: `{user}`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (placeholder
        (identifier)))))

================================================================================
Template with double single quotes
================================================================================

literal_quote: `Don''t use this pattern`

--------------------------------------------------------------------------------

(source_file
  (key
    (identifier))
  (value
    (template_string
      (escaped_char))))
